--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -11,7 +11,8 @@
       <h3>Group member list:</h3>
       <!-- Please put team members here -->
       <div>
-        <p>Team member one</p>
+        <p>Peter Yoon</p>
+        <p>Josh</p>
       </div>
     </div>
   </body>
