Add extra p tag

--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -14,6 +14,7 @@
         <p>Peter Yoon</p>
         <p>Josh</p>
         <p>hehehehhehehe</p>
+        <p>Gang</p>
       </div>
     </div>
   </body>
