Add Gang2 p tag

--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -15,6 +15,7 @@
         <p>Josh</p>
         <p>hehehehhehehe</p>
         <p>Gang</p>
+        <p>Gang 2</p>
       </div>
     </div>
   </body>
